--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "firebase": "^12.0.0",
     "lucide-react": "^0.525.0",
     "next": "15.4.2",
