--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,20 +1,23 @@
 {
   "name": "YS Finance",
-  "short_name": "Finance",
-  "start_url": "/",
-  "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#1d4ed8",
+  "short_name": "YS Finance",
+  "description": "Aplikasi Keuangan Pribadi by YS",
   "icons": [
     {
-      "src": "/icon-192.png",
+      "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
-      "src": "/icon-512.png",
+      "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
-  ]
+  ],
+  "theme_color": "#2563eb",
+  "background_color": "#ffffff",
+  "start_url": "/dashboard",
+  "display": "standalone",
+  "orientation": "portrait"
 }
